--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,19 +25,31 @@
   </div>
 </div>
 
+<div class="text-center mt-5">
+  <a
+    href="/restaurants/new"
+    class="text-decoration-none border border-2 border-warning text-white bg-dark p-3 rounded-pill"
+  >
+    <i class="fa-solid fa-plus"></i>
+    新增餐廳
+  </a>
+</div>
+
 <!-- restaurant list -->
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="row row-cols-sm-3">
         {{#each restaurants}}
-          <a href="/restaurants/{{this.id}}" class="text-secondary">
+          <div class="text-secondary">
             <div class="card mb-3">
-              <img
-                class="card-img-top"
-                src="{{this.image}}"
-                alt="{{this.name}}"
-              />
+              <a href="/restaurants/{{this.id}}">
+                <img
+                  class="card-img-top"
+                  src="{{this.image}}"
+                  alt="{{this.name}}"
+                />
+              </a>
               <div class="card-body p-3">
                 <h6 class="card-title mb-1">{{this.name}}</h6>
                 <div class="restaurant-category mb-1">
@@ -45,14 +57,26 @@
                   {{this.category}}
                 </div>
 
-                <span class="badge rounded-pill bg-danger">
-                  {{this.rating}}
-                  <i class="fas fa-star fa-xs"></i>
-                </span>
+                <div
+                  class="d-flex justify-content-between align-items-center mt-3"
+                >
+                  <span class="badge rounded-pill bg-danger">
+                    {{this.rating}}
+                    <i class="fas fa-star fa-xs"></i>
+                  </span>
+                  <span>
+                    <a href="/restaurants/{{this.id}}/edit">
+                      <i class="fa-solid fa-pen-to-square text-primary"></i></a>
+                    <a href="/restaurants/{{this.id}}" class="mx-2">
+                      <i class="fa-solid fa-circle-info text-info"></i></a>
+                    <a href="/restaurants/{{this.id}}/delete">
+                      <i class="fa-solid fa-trash text-dark"></i></a>
+                  </span>
+                </div>
 
               </div>
             </div>
-          </a>
+          </div>
         {{/each}}
       </div>
     </div>
