--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
         {{#each restaurants}}
           <div class="text-secondary">
             <div class="card mb-3">
-              <a href="/restaurants/{{this.id}}">
+              <a href="/restaurants/{{this._id}}">
                 <img
                   class="card-img-top"
                   src="{{this.image}}"
@@ -65,11 +65,11 @@
                     <i class="fas fa-star fa-xs"></i>
                   </span>
                   <span>
-                    <a href="/restaurants/{{this.id}}/edit">
+                    <a href="/restaurants/{{this._id}}/edit">
                       <i class="fa-solid fa-pen-to-square text-primary"></i></a>
-                    <a href="/restaurants/{{this.id}}" class="mx-2">
+                    <a href="/restaurants/{{this._id}}" class="mx-2">
                       <i class="fa-solid fa-circle-info text-info"></i></a>
-                    <a href="/restaurants/{{this.id}}/delete">
+                    <a href="/restaurants/{{this._id}}/delete">
                       <i class="fa-solid fa-trash text-dark"></i></a>
                   </span>
                 </div>
