--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,6 +25,7 @@
   </div>
 </div>
 
+{{#unless keyword}}
 <div class="text-center mt-5">
   <a
     href="/restaurants/new"
@@ -34,6 +35,7 @@
     新增餐廳
   </a>
 </div>
+{{/unless}}
 
 <!-- restaurant list -->
 <div class="container mt-5">
