feat: add edit and back link in show page

--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -44,6 +44,11 @@
         alt="{{restaurant.name}}"
         style="max-width: 600px;"
       />
+
+      <div class="text-end">
+        <a href="/restaurants/{{restaurant._id}}/edit">修改資料</a>
+        <a href="/" class="text-success ms-2">返回主頁</a>
+      </div>
     </div>
   </div>
 </div>
