feat: add textarea required and delete reminder

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -110,6 +110,7 @@
         id="description"
         rows="3"
         placeholder="請輸入餐廳描述內容"
+        required
       >{{restaurant.description}}</textarea>
     </div>
     <div class="col-12">
