--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -99,6 +99,7 @@
         id="description"
         rows="3"
         placeholder="請輸入餐廳描述內容"
+        required
       ></textarea>
     </div>
     <div class="col-12">
