--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,6 +23,13 @@
             />
             我的餐廳清單
           </a>
+          <a
+            href="/restaurants/new"
+            class="text-decoration-none border border-2 border-warning text-white bg-dark p-2 rounded-pill"
+          >
+            <i class="fa-solid fa-plus"></i>
+            新增餐廳
+          </a>
         </div>
       </nav>
       <div class="banner"></div>
@@ -30,8 +37,7 @@
 
     {{{body}}}
 
-    <script src="/javascript/bootstrap.js"></script>
-    <script src="/javascript/popper.js"></script>
+    <script src="/javascript/bootstrap.bundle.js"></script>
     <script
       src="https://kit.fontawesome.com/9b3cbb68a9.js"
       crossorigin="anonymous"
