--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,21 +21,28 @@
           </div>
         </div>
       </form>
+      {{#unless keyword}}
+        <form class="d-flex justify-content-end m-0" action="/" method="GET">
+          <div>
+            <select
+              class="form-select form-select-sm"
+              aria-label="select sort"
+              role="button"
+              name="sort"
+              onchange="this.form.submit()"
+            >
+              <option {{#if sortSelected.default}} selected {{/if}} value="default">Sort by</option>
+              <option {{#if sortSelected.AtoZ}} selected {{/if}} value="AtoZ">A → Z</option>
+              <option {{#if sortSelected.ZtoA}} selected {{/if}} value="ZtoA">Z → A</option>
+              <option {{#if sortSelected.category}} selected {{/if}} value="category">類別</option>
+              <option {{#if sortSelected.location}} selected {{/if}} value="location">地區</option>
+            </select>
+          </div>
+        </form>
+      {{/unless}}
     </div>
   </div>
 </div>
-
-{{#unless keyword}}
-  <div class="text-center mt-5">
-    <a
-      href="/restaurants/new"
-      class="text-decoration-none border border-2 border-warning text-white bg-dark p-3 rounded-pill"
-    >
-      <i class="fa-solid fa-plus"></i>
-      新增餐廳
-    </a>
-  </div>
-{{/unless}}
 
 <!-- restaurant list -->
 <div class="container mt-5">
