feat: add method-override

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,7 +1,7 @@
 <div class="container text-center pt-3">
   <h3 class="mb-5">新增餐廳資料</h3>
   <form
-    action="/restaurants/{{restaurant._id}}/edit"
+    action="/restaurants/{{restaurant._id}}?_method=PUT"
     method="POST"
     class="row g-3"
   >
