style: show location in home page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,7 +74,8 @@ header {
   white-space: nowrap;
 }
 
-.restaurant-category {
+.restaurant-category,
+.restaurant-location {
   color: #666666;
   font-size: 0.8rem;
 }
