--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -84,6 +84,10 @@
                   <i class="fas fa-utensils pr-2"></i>
                   {{this.category}}
                 </div>
+                <div class="restaurant-location mb-1">
+                  <i class="fa-solid fa-location-dot pr-2"></i>
+                  {{this.location}}
+                </div>
 
                 <div
                   class="d-flex justify-content-between align-items-center mt-3"
