--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,14 @@
             </button>
           </div>
         </div>
-        <div class="d-flex justify-content-end mt-3">
+        <div class="d-flex justify-content-between align-items-center mt-3">
+          <a
+            href="/restaurants/new"
+            class="text-decoration-none border border-2 border-warning text-white bg-dark p-2 rounded-pill"
+          >
+            <i class="fa-solid fa-plus"></i>
+            新增餐廳
+          </a>
           <div>
             <select
               class="form-select form-select-sm"
