--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -11,6 +11,7 @@
             name="name"
             class="form-control"
             placeholder="Enter Name"
+            value="{{name}}"
           />
         </div>
         <div class="mb-3">
@@ -21,6 +22,7 @@
             name="email"
             class="form-control"
             placeholder="Enter Email"
+            value="{{email}}"
           />
         </div>
         <div class="mb-3">
@@ -31,6 +33,7 @@
             name="password"
             class="form-control"
             placeholder="Enter Password"
+            value="{{password}}"
           />
         </div>
         <div class="mb-3">
@@ -41,6 +44,7 @@
             name="confirmPassword"
             class="form-control"
             placeholder="Confirm Password"
+            value="{{confirmPassword}}"
           />
         </div>
         <button
