--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,5 @@
-<div class="row mt-5">
-  <div class="col-md-6 m-auto">
+<div class="row mx-auto mt-5">
+  <div class="col-md-6 mx-auto mb-5">
     <div class="card card-body">
       <h1 class="text-center mt-3">Register</h1>
       <form action="/users/register" method="POST">
