--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant List</title>
+    <link
+      rel="shortcut icon"
+      href="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="/stylesheets/bootstrap.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
@@ -21,7 +26,11 @@
               class="d-inline-block align-top"
               alt="我的餐廳清單"
             />
-            我的餐廳清單
+            {{#if user}}
+              {{user.name}}的餐廳清單
+            {{else}}
+              我的餐廳清單
+            {{/if}}
           </a>
           {{#if isAuthenticated}}
             <a href="/users/logout" class="btn btn-outline-secondary">Logout</a>
