--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,6 +2,7 @@
   <div class="col-md-6 mx-auto mb-5">
     <div class="card card-body">
       <h1 class="text-center mt-3">Login</h1>
+      {{> message}}
 
       <form action="/users/login" method="POST">
         <div class="mb-3">
