--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,6 +2,7 @@
   <div class="col-md-6 mx-auto mb-5">
     <div class="card card-body">
       <h1 class="text-center mt-3">Register</h1>
+      {{> message}}
       <form action="/users/register" method="POST">
         <div class="mb-3">
           <label for="name" class="mb-2">Name</label>
