--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,6 +13,7 @@
             name="email"
             class="form-control"
             placeholder="Enter Email"
+            required
           />
         </div>
         <div class="mb-3">
@@ -23,10 +24,12 @@
             name="password"
             class="form-control"
             placeholder="Enter Password"
+            required
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
         <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
+        <a href="/auth/google" class="btn btn-danger btn-block">Google Login</a>
       </form>
       <p class="lead mt-4">
         No Account?
