--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -53,6 +53,7 @@
           class="btn btn-primary btn-block"
         >Register</button>
         <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
+        <a href="/auth/google" class="btn btn-danger btn-block">Google Login</a>
       </form>
       <p class="lead mt-4">
         Have An Account?
