--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -56,63 +56,71 @@
 </div>
 
 <!-- restaurant list -->
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-10 col-12 mx-auto">
-      <div class="row row-cols-sm-3">
-        {{#each restaurants}}
-          <div class="text-secondary">
-            <div class="card mb-3">
-              <a href="/restaurants/{{this._id}}">
-                <img
-                  class="card-img-top"
-                  src="{{this.image}}"
-                  alt="{{this.name}}"
-                />
-              </a>
-              <div class="card-body p-3">
-                <h6 class="card-title mb-1">{{this.name}}</h6>
-                <div class="restaurant-category mb-1">
-                  <i class="fas fa-utensils pr-2"></i>
-                  {{this.category}}
-                </div>
-                <div class="restaurant-location mb-1">
-                  <i class="fa-solid fa-location-dot pr-2"></i>
-                  {{this.location}}
-                </div>
+{{#if restaurants}}
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-10 col-12 mx-auto">
+        <div class="row row-cols-sm-3">
+          {{#each restaurants}}
+            <div class="text-secondary">
+              <div class="card mb-3">
+                <a href="/restaurants/{{this._id}}">
+                  <img
+                    class="card-img-top"
+                    src="{{this.image}}"
+                    alt="{{this.name}}"
+                  />
+                </a>
+                <div class="card-body p-3">
+                  <h6 class="card-title mb-1">{{this.name}}</h6>
+                  <div class="restaurant-category mb-1">
+                    <i class="fas fa-utensils pr-2"></i>
+                    {{this.category}}
+                  </div>
+                  <div class="restaurant-location mb-1">
+                    <i class="fa-solid fa-location-dot pr-2"></i>
+                    {{this.location}}
+                  </div>
 
-                <div
-                  class="d-flex justify-content-between align-items-center mt-3"
-                >
-                  <span class="badge rounded-pill bg-danger">
-                    {{this.rating}}
-                    <i class="fas fa-star fa-xs"></i>
-                  </span>
-                  <span>
-                    <a href="/restaurants/{{this._id}}/edit">
-                      <i class="fa-solid fa-pen-to-square text-primary"></i></a>
-                    <a href="/restaurants/{{this._id}}" class="mx-2">
-                      <i class="fa-solid fa-circle-info text-info"></i></a>
-                    <form
-                      class="d-inline m-0"
-                      action="/restaurants/{{this._id}}?_method=DELETE"
-                      method="POST"
-                    >
-                      <button
-                        class="p-0 border-0"
-                        type="submit"
-                        onclick="return confirm(`確定要刪除 {{this.name}} 嗎?`)"
+                  <div
+                    class="d-flex justify-content-between align-items-center mt-3"
+                  >
+                    <span class="badge rounded-pill bg-danger">
+                      {{this.rating}}
+                      <i class="fas fa-star fa-xs"></i>
+                    </span>
+                    <span>
+                      <a href="/restaurants/{{this._id}}/edit">
+                        <i
+                          class="fa-solid fa-pen-to-square text-primary"
+                        ></i></a>
+                      <a href="/restaurants/{{this._id}}" class="mx-2">
+                        <i class="fa-solid fa-circle-info text-info"></i></a>
+                      <form
+                        class="d-inline m-0"
+                        action="/restaurants/{{this._id}}?_method=DELETE"
+                        method="POST"
                       >
-                        <i class="fa-solid fa-trash text-dark"></i></button>
-                    </form>
-                  </span>
-                </div>
+                        <button
+                          class="p-0 border-0"
+                          type="submit"
+                          onclick="return confirm(`確定要刪除 {{this.name}} 嗎?`)"
+                        >
+                          <i class="fa-solid fa-trash text-dark"></i></button>
+                      </form>
+                    </span>
+                  </div>
 
+                </div>
               </div>
             </div>
-          </div>
-        {{/each}}
+          {{/each}}
+        </div>
       </div>
     </div>
   </div>
-</div>
+{{else}}
+  <div class="container mt-5 text-center">
+    沒有符合搜尋條件的餐廳
+  </div>
+{{/if}}
