--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant List</title>
+    <title>我的餐廳清單</title>
     <link
       rel="shortcut icon"
       href="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
@@ -33,9 +33,9 @@
             {{/if}}
           </a>
           {{#if isAuthenticated}}
-            <a href="/users/logout" class="btn btn-outline-secondary">Logout</a>
+            <a href="/users/logout" class="btn btn-outline-secondary">登出</a>
           {{else}}
-            <a href="/users/login" class="btn btn-outline-info">Login</a>
+            <a href="/users/login" class="btn btn-outline-info">登入</a>
           {{/if}}
         </div>
       </nav>
