--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="row mx-auto mt-5">
   <div class="col-md-6 mx-auto mb-5">
     <div class="card card-body">
-      <h1 class="text-center mt-3">Login</h1>
+      <h1 class="text-center mt-3">登入會員</h1>
       {{> message}}
 
       <form action="/users/login" method="POST">
@@ -17,7 +17,7 @@
           />
         </div>
         <div class="mb-3">
-          <label for="password" class="mb-2">Password</label>
+          <label for="password" class="mb-2">密碼</label>
           <input
             type="password"
             id="password"
@@ -27,13 +27,13 @@
             required
           />
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
-        <a href="/auth/google" class="btn btn-danger btn-block">Google Login</a>
+        <button type="submit" class="btn btn-primary btn-block">登入</button>
+        <a href="/auth/facebook" class="btn btn-info btn-block">使用<strong> Facebook </strong>登入</a>
+        <a href="/auth/google" class="btn btn-danger btn-block">使用<strong> Google </strong>登入</a>
       </form>
       <p class="lead mt-4">
-        No Account?
-        <a href="/users/register">Register</a>
+        還沒有會員帳號嗎?
+        <a href="/users/register">註冊</a>
       </p>
     </div>
   </div>
