feat: add no list message and fix search logic

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,7 +57,7 @@
 
 <!-- restaurant list -->
 {{#if restaurants}}
-  <div class="container mt-5">
+  <div class="container mt-5 pb-5">
     <div class="row">
       <div class="col-md-10 col-12 mx-auto">
         <div class="row row-cols-sm-3">
@@ -120,7 +120,7 @@
     </div>
   </div>
 {{else}}
-  <div class="container mt-5 text-center">
-    沒有符合搜尋條件的餐廳
+  <div class="container mt-5 pb-5 text-center">
+    目前清單內沒有餐廳，請新增餐廳
   </div>
 {{/if}}
