--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,9 +41,9 @@
       </nav>
       <div class="banner"></div>
     </header>
-
-    {{{body}}}
-
+    <main>
+      {{{body}}}
+    </main>
     <script src="/javascript/bootstrap.bundle.js"></script>
     <script
       src="https://kit.fontawesome.com/9b3cbb68a9.js"
